--- a/navbar.html
+++ b/navbar.html
@@ -9,7 +9,7 @@
 <style>
     #container{
         display: grid;
-        grid-template-columns: repeat(10,1fr);
+        grid-template-columns: repeat(5,1fr);
         grid-template-rows: 60px;
         border:0px solid black;
         background-color: rgb(13, 13, 63);
@@ -19,18 +19,16 @@
     #container>div{
         border:0px solid black
     }
+    #container>div:nth-child(1){
+        width: 1100px;
+    }
     h4{
-        text-align: center;
+        margin-left:30px;
     }
 </style>
 <body>
     <div id="container">
         <div><h4>Rebook</h4></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
         <div><h4>Men</h4></div>
         <div><h4>Women</h4></div>
         <div><h4>Login</h4></div>
