--- a/navbar.html
+++ b/navbar.html
@@ -9,18 +9,19 @@
 <style>
     #container{
         display: grid;
-        grid-template-columns: repeat(5,1fr);
-        grid-template-rows: 60px;
-        border:0px solid black;
+        grid-template-columns: repeat(2,1fr);
+        border:1px solid white;
         background-color: rgb(13, 13, 63);
         color:white;
         border-radius:15px;
+        justify-content: space-between;
     }
-    #container>div{
-        border:0px solid black
-    }
-    #container>div:nth-child(1){
-        width: 1100px;
+    #container>div:nth-child(2){
+        margin-right: 30px;
+        display: flex;
+        justify-content: right;
+        border:none;
+        
     }
     h4{
         margin-left:30px;
@@ -29,12 +30,12 @@
 <body>
     <div id="container">
         <div><h4>Rebook</h4></div>
-        <div><h4>Men</h4></div>
-        <div><h4>Women</h4></div>
-        <div><h4>Login</h4></div>
-        <div><h4>Singup</h4></div>
-
-
+        <div>
+            <h4>Men</h4>
+            <h4>Women</h4>
+            <h4>Login</h4>
+            <h4>Singup</h4>
+        </div>
     </div>
 </body>
 </html>
