--- a/navbar.html
+++ b/navbar.html
@@ -25,16 +25,21 @@
     }
     h4{
         margin-left:30px;
+        cursor: pointer;
+    }
+    a{
+        color:white;
+        text-decoration: none;
     }
 </style>
 <body>
     <div id="container">
         <div><h4>Rebook</h4></div>
         <div>
-            <h4>Men</h4>
-            <h4>Women</h4>
-            <h4>Login</h4>
-            <h4>Singup</h4>
+            <h4><a href="mens.html">Men</a></h4>
+            <h4><a href="mens.html">Women</a></h4>
+            <h4><a href="login.html">Login</a></h4>
+            <h4><a href="signup.html">Singup</a></h4>
         </div>
     </div>
 </body>
